@@ -39,6 +39,7 @@ import org.elasticsearch.monitor.fs.FsInfo;
 import org.elasticsearch.threadpool.ThreadPool;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -187,8 +188,8 @@ public class InternalClusterInfoService implements ClusterInfoService, ClusterSt
                         leastAvailableUsagesBuilder,
                         mostAvailableUsagesBuilder
                     );
-                    leastAvailableSpaceUsages = Map.copyOf(leastAvailableUsagesBuilder);
-                    mostAvailableSpaceUsages = Map.copyOf(mostAvailableUsagesBuilder);
+                    leastAvailableSpaceUsages = Collections.unmodifiableMap(leastAvailableUsagesBuilder);
+                    mostAvailableSpaceUsages = Collections.unmodifiableMap(mostAvailableUsagesBuilder);
                 }
 
                 @Override
@@ -261,10 +262,10 @@ public class InternalClusterInfoService implements ClusterInfoService, ClusterSt
                     reservedSpaceBuilders.forEach((nodeAndPath, builder) -> rsrvdSpace.put(nodeAndPath, builder.build()));
 
                     indicesStatsSummary = new IndicesStatsSummary(
-                        Map.copyOf(shardSizeByIdentifierBuilder),
-                        Map.copyOf(shardDataSetSizeBuilder),
-                        Map.copyOf(dataPathByShardRoutingBuilder),
-                        Map.copyOf(rsrvdSpace)
+                        Collections.unmodifiableMap(shardSizeByIdentifierBuilder),
+                        Collections.unmodifiableMap(shardDataSetSizeBuilder),
+                        Collections.unmodifiableMap(dataPathByShardRoutingBuilder),
+                        Collections.unmodifiableMap(rsrvdSpace)
                     );
                 }
 
